Fixed code color that was too light
Also tip icon color was too light
Also hl colors were missing in some cases

--- a/_sass/asciidoc.scss
+++ b/_sass/asciidoc.scss
@@ -63,7 +63,7 @@ table.configuration-reference { table-layout: inherit;}
 .admonitionblock td.icon {border: none !important; }
 .admonitionblock td.content{border-top: none !important; border-right: none !important; border-bottom: none !important;}
 .admonitionblock td.icon .icon-note::before{color:$quarkus-blue; }
-.admonitionblock td.icon .icon-tip::before{color:#f8ad39;}
+.admonitionblock td.icon .icon-tip::before{color:#943000;text-shadow:inherit;}
 .conum[data-value]{color:black !important; background:#CCC; }
 .conum[data-value] *{color:black !important}
 .admonitionblock>table td.content { font-weight:400; line-height: 1.5rem; }
