--- a/_sass/quarkus.scss
+++ b/_sass/quarkus.scss
@@ -245,8 +245,17 @@ dl dt:not(:first-child) {
     margin-top: 1.5em;
 }
 
-code, pre, pre span {
+/* Over gray in text */
+code {
+  color: #943000;
+}
+
+/* Over black in code blocks */
+pre, pre span {
   color: #be9100;
+}
+
+code, pre, pre span {
   background-color: inherit;
   padding: 0;
   a {
@@ -364,12 +373,14 @@ i.conum + b, b.conum {
 .hljs-built_in,
 .hljs-selector-tag,
 .hljs-section,
-.hljs-link {
+.hljs-link,
+.hljs-function,
+.hljs-params {
   color: $white;
 }
 
 .hljs-keyword {
-  color: $white;
+  color: $link;
 }
 
 .hljs,
